--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "@actions/core": "^1.4.0",
     "@actions/github": "^5.0.0",
     "@octokit/plugin-retry": "^3.0.9",
-    "@octokit/plugin-throttling": "^3.5.0",
-    "@octokit/rest": "^18.6.0",
-    "lowdb": "^1.0.0"
+    "@octokit/plugin-throttling": "^3.5.1",
+    "@octokit/rest": "^18.6.7",
+    "lowdb": "1.0.0"
   },
   "devDependencies": {
-    "webpack": "^5.40.0",
+    "jest": "^27.0.6",
+    "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2"
   }
 }
